aesthetic fix on mobile

--- a/_sass/rows.scss
+++ b/_sass/rows.scss
@@ -121,6 +121,14 @@
 }
 
 @include media-query($on-palm) {
+  .row__post {
+      &:hover {
+      * {
+        text-decoration: underline;
+        cursor: pointer;
+        background-color: $color__rust;
+      }}}
+
   .row__cols,
   .row__post {
     margin: 0;
